dates fixed, 2-3 parts added

--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@
 </h2>
 <p>I&rsquo;m a full-time 3rd year student of MIPT.</p>
 <p>But also I&rsquo;m interested in photography, athletics and programming.</p>
-<p>In my free time I like to explore and post my photos <a href="https://vk.com/club_reflexer">here</a>.</p>
+<p>In my free time I like to explore and post my photos <a href="https://vk.com/club_reflexer">here</a> and best of them <a href="https://ea-evdokimov.github.io/posts/">here</a>.</p>
 <h2 id="my-contacts">
   My contacts:
   <a class="heading-link" href="#my-contacts">
