descriptions fixed, base url

--- a/404.html
+++ b/404.html
@@ -20,14 +20,14 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="It&#39;s my personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://www.example.com/404.html" />
+<meta property="og:url" content="https://ea-evdokimov.github.io/404.html" />
 
 
 
     <title>EA Evdokimov</title>
 
     
-      <link rel="canonical" href="http://www.example.com/404.html">
+      <link rel="canonical" href="https://ea-evdokimov.github.io/404.html">
     
 
     <link rel="preload" href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as="font" type="font/woff2" crossorigin>
@@ -114,7 +114,7 @@
   <div class="error">
     <h1>404</h1>
     <h2>Page Not Found</h2>
-    <p>Sorry, this page does not exist.<br />You can head back to the <a href="http://www.example.com">homepage</a>.</p>
+    <p>Sorry, this page does not exist.<br />You can head back to the <a href="https://ea-evdokimov.github.io/">homepage</a>.</p>
   </div>
 </section>
 
