--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Projects" />
 <meta property="og:description" content="Пока что руки не дошли, но дойдут!" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://www.example.com/projects/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://ea-evdokimov.github.io/projects/" /><meta property="article:section" content="" />
 
 
 
@@ -31,7 +31,7 @@
 </title>
 
     
-      <link rel="canonical" href="http://www.example.com/projects/">
+      <link rel="canonical" href="https://ea-evdokimov.github.io/projects/">
     
 
     <link rel="preload" href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as="font" type="font/woff2" crossorigin>
@@ -118,7 +118,7 @@
   <article>
     <header>
       <h1 class="title">
-        <a class="title-link" href="http://www.example.com/projects/">
+        <a class="title-link" href="https://ea-evdokimov.github.io/projects/">
           Projects
         </a>
       </h1>
