--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta property="og:title" content="EA Evdokimov" />
 <meta property="og:description" content="It&#39;s my personal website" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://www.example.com/" />
+<meta property="og:url" content="https://ea-evdokimov.github.io/" />
 
 
 
     <title>EA Evdokimov</title>
 
     
-      <link rel="canonical" href="http://www.example.com/">
+      <link rel="canonical" href="https://ea-evdokimov.github.io/">
     
 
     <link rel="preload" href="/fonts/forkawesome-webfont.woff2?v=1.2.0" as="font" type="font/woff2" crossorigin>
