--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
 
 
-    <title>EA Evdokimov</title>
+    <title>EA-EVDOKIMOV</title>
 
     
       <link rel="canonical" href="https://ea-evdokimov.github.io/404.html">
@@ -78,7 +78,7 @@
       <nav class="navigation">
   <section class="container">
     <a class="navigation-title" href="/">
-      EA Evdokimov
+      EA-EVDOKIMOV
     </a>
     
       <input type="checkbox" id="menu-toggle" />
