--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 
 
     <title>
-  About · EA Evdokimov
+  About · EA-EVDOKIMOV
 </title>
 
     
@@ -82,7 +82,7 @@
       <nav class="navigation">
   <section class="container">
     <a class="navigation-title" href="/">
-      EA Evdokimov
+      EA-EVDOKIMOV
     </a>
     
       <input type="checkbox" id="menu-toggle" />
@@ -130,9 +130,10 @@
     <i class="fa fa-link" aria-hidden="true"></i>
   </a>
 </h2>
-<p>I&rsquo;m a full-time 3rd year student of MIPT.</p>
+<p>I&rsquo;m a full-time 4th year student of MIPT.</p>
 <p>But also I&rsquo;m interested in photography, athletics and programming.</p>
-<p>In my free time I like to explore and post my photos <a href="https://vk.com/club_reflexer">here</a> and best of them <a href="https://ea-evdokimov.github.io/posts/">here</a>.</p>
+<p>In my free time I like to explore and post my photos <a href="https://vk.com/club_reflexer">in VK group</a> and best of them <a href="https://ea-evdokimov.github.io/posts/">here</a>.</p>
+<p>My CV can be found <a href="/CV_Evdokimov.pdf">here</a>.</p>
 <h2 id="my-contacts">
   My contacts:
   <a class="heading-link" href="#my-contacts">
@@ -145,9 +146,6 @@
 <p><a href="https://github.com/ea-evdokimov">GitHub</a></p>
 <p><a href="mailto:evdokimov.ea@phystech.edu">Mail</a></p>
 <p><a href="https://vk.com/ea_evdokimov">VK</a></p>
-<p><a href="https://drive.google.com/file/d/1IG68mF9kHO3_6iBbUyn7ugPLDhfCOrHy/view?usp=sharing">CV</a></p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
 
   </article>
 </section>
